endless cycle on Server

--- a/client/src/main/resources/main.fxml
+++ b/client/src/main/resources/main.fxml
@@ -6,9 +6,16 @@
 <?import javafx.scene.layout.VBox?>
 
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <VBox alignment="CENTER" prefHeight="400.0" prefWidth="400.0"
       xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.172-ea" fx:controller="ClientController">
-    <HBox HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS">
+    <VBox fx:id="authPanel" alignment="CENTER" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS" visible="true">
+        <Label fx:id="authMessage" visible="false"></Label>
+        <TextField fx:id="tfUsername" promptText="Имя пользователя" />
+        <TextField fx:id="tfPassword" promptText="Пароль" />
+        <Button onAction="#pressOnAuthBtn" text="Авторизоваться" HBox.hgrow="ALWAYS" />
+    </VBox>
+    <HBox fx:id="clientPanel" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS" visible="false">
         <VBox fx:id="vbClient" HBox.hgrow="ALWAYS">
             <Label>Client</Label>
             <ListView fx:id="filesListClient" VBox.vgrow="ALWAYS" />
@@ -18,7 +25,7 @@
             <ListView fx:id="filesListServer" VBox.vgrow="ALWAYS" />
         </VBox>
     </HBox>
-    <HBox HBox.hgrow="ALWAYS" alignment="CENTER">
+    <HBox fx:id="serverPanel" HBox.hgrow="ALWAYS" alignment="CENTER" visible="false">
         <Button fx:id="btnCopy" onAction="#pressOnCopyBtn" text="Копировать" />
         <Button onAction="#pressOnMoveBtn" text="Переместить" />
         <Button onAction="#pressOnDelBtn" text="Удалить" />
