--- a/client/src/main/resources/main.fxml
+++ b/client/src/main/resources/main.fxml
@@ -6,9 +6,16 @@
 <?import javafx.scene.layout.VBox?>
 
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.PasswordField?>
 <VBox alignment="CENTER" prefHeight="400.0" prefWidth="400.0"
       xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.172-ea" fx:controller="ClientController">
-    <HBox HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS">
+    <HBox fx:id="hbAuth" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS" visible="true">
+        <TextField fx:id="tfLogin" focusTraversable="true" onAction="#pressOnAuthBtn" promptText="Имя пользователя" />
+        <PasswordField fx:id="pfPassword" focusTraversable="true" onAction="#pressOnAuthBtn" promptText="Пароль" />
+        <Button onAction="#pressOnAuthBtn" text="Авторизоваться" />
+    </HBox>
+    <HBox fx:id="hbFilesList" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS" visible="false">
         <VBox fx:id="vbClient" HBox.hgrow="ALWAYS">
             <Label>Client</Label>
             <ListView fx:id="filesListClient" VBox.vgrow="ALWAYS" />
@@ -18,7 +25,7 @@
             <ListView fx:id="filesListServer" VBox.vgrow="ALWAYS" />
         </VBox>
     </HBox>
-    <HBox HBox.hgrow="ALWAYS" alignment="CENTER">
+    <HBox fx:id="hbManagePanel" HBox.hgrow="ALWAYS" alignment="CENTER" visible="false">
         <Button fx:id="btnCopy" onAction="#pressOnCopyBtn" text="Копировать" />
         <Button onAction="#pressOnMoveBtn" text="Переместить" />
         <Button onAction="#pressOnDelBtn" text="Удалить" />
