--- a/client/src/main/resources/main.fxml
+++ b/client/src/main/resources/main.fxml
@@ -10,12 +10,13 @@
 <?import javafx.scene.control.PasswordField?>
 <VBox alignment="CENTER" prefHeight="400.0" prefWidth="400.0"
       xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.172-ea" fx:controller="ClientController">
-    <HBox fx:id="hbAuth" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS" visible="true">
+    <Label fx:id="lMsg" style="-fx-padding: 10px;" text="Добро пожаловать в чат!" />
+    <VBox fx:id="vbAuth" alignment="CENTER" maxHeight="200.0" maxWidth="200.0" style="-fx-padding: 30px;" visible="true">
         <TextField fx:id="tfLogin" focusTraversable="true" onAction="#pressOnAuthBtn" promptText="Имя пользователя" />
         <PasswordField fx:id="pfPassword" focusTraversable="true" onAction="#pressOnAuthBtn" promptText="Пароль" />
         <Button onAction="#pressOnAuthBtn" text="Авторизоваться" />
-    </HBox>
-    <HBox fx:id="hbFilesList" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS" visible="false">
+    </VBox>
+    <HBox fx:id="hbFilesList" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS" style="-fx-padding: 10px;" visible="false">
         <VBox fx:id="vbClient" HBox.hgrow="ALWAYS">
             <Label>Client</Label>
             <ListView fx:id="filesListClient" VBox.vgrow="ALWAYS" />
@@ -25,7 +26,7 @@
             <ListView fx:id="filesListServer" VBox.vgrow="ALWAYS" />
         </VBox>
     </HBox>
-    <HBox fx:id="hbManagePanel" HBox.hgrow="ALWAYS" alignment="CENTER" visible="false">
+    <HBox fx:id="hbManagePanel" HBox.hgrow="ALWAYS" alignment="CENTER" style="-fx-padding: 10px;" visible="false">
         <Button fx:id="btnCopy" onAction="#pressOnCopyBtn" text="Копировать" />
         <Button onAction="#pressOnMoveBtn" text="Переместить" />
         <Button onAction="#pressOnDelBtn" text="Удалить" />
